[task_manager] Add ARC process whitelist.

Filter which Android processes we display in the task manager by an
explicit whitelist and based on ProcessState.

BUG=654564

Review-Url: https://codereview.chromium.org/2655633002
Cr-Commit-Position: refs/heads/master@{#448580}

Former-commit-id: 13452f1a1149352dc13b53027bbceac54ed217e6